--- a/Analysis/F2_EW_MainAnalysis.Rmd
+++ b/Analysis/F2_EW_MainAnalysis.Rmd
@@ -8,7 +8,7 @@ e-mail: quentin.schorpp@ti.bund.de
 output: 
       html_document:
           toc: true
-          toc_depth: 2
+          toc_depth: 3
           number_sections: true
           fig_caption: true
           theme: cerulean
@@ -19,16 +19,21 @@ knitr::opts_chunk$set(fig.align="center",
                       message=FALSE,
                       error=FALSE,
                       warning=FALSE,
-                      echo=FALSE,
-                      root.dir = 'D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/')
+                      echo=FALSE)
+knitr::opts_knit$set(root.dir = 'D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/')
 
 options(scipen=1, digits=2)
 set.seed(1234)
 ```
 
-```{r, results='hide'}
-setwd("D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/")
+```{r LoadData, results='hide'}
+# Load Data
+#setwd("D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/")
 source("Data/GatherSource/Gather1.R")
+```
+
+```{r RequiredPackages}
+source("Analysis/F2_EW_RequiredPackages.R")
 ```
 
 
@@ -81,6 +86,8 @@ ________________________________________________________________________________
 
 ___________________________________________________________________________________________________
 
+## Exploratory Data Analysis (EDA)
+
 ### Density Plots
 ```{r DensityPlots, fig.height=6, fig.width=7}
 par(mfrow=c(2,2))
@@ -88,45 +95,6 @@ plot(density(data$N), main="density-plot of total abundance")
 plot(density(data$anc), main="density-plot of anecic abundance")
 plot(density(data$epi), main="density-plot of epigeic abundance")
 plot(density(data$endo), main="density-plot of endogeic abundance") # Outliers > 80 ?
-```
-
-
-# Figures of raw data
-```{r}
-data.raw.fig <- data[,c(which(colnames(data)=="age_class"),which(colnames(data)=="anc"):which(colnames(data)=="epi.bm"))]
-
-library(reshape2)
-data.rf.melted <- melt(data.raw.fig, id.vars=c(1,5:7), variable="sfg", value.name="abundance")
-data.rf.melted <- melt(data.raw.fig, id.vars=c(1,5,6), variable="sfg.bm", value.name="biomass")
-
-ggplot2()
-
-
-```
-
-
-
-## General linear Mixed Effects Models
-
-
-### Standardize Explanatory Variables
-```{r DataProcessing}
-
-## Create variable d(delta)samcam as the time difference of each sampling date to the first date, that each field was sampled; first date is Zero for all fields. ####
-data$dsamcam <- with(data, round(c(rep(0,60),date[61:120]-date[1:60],date[121:180]-date[1:60]),0))
-
-## Standardize all explanatory variables ####
-
-# extract all numerical variables
-std.var <- data[sapply(data,is.numeric)]
-# exclude all response variables
-std.var <- std.var[,-c(7:30,49:58)]
-
-# standardize, each column is divided by their standard deviation, and the mean of each column is subtracted 
-std.var <- as.data.frame(scale(std.var, center=TRUE, scale=TRUE))
-colnames(std.var) <- paste("scl", colnames(std.var), sep = ".") # rename columns
-
-data <- cbind(data, std.var)
 ```
 
 ### Scatterplots for all pairs of environmental variables
@@ -150,8 +118,53 @@ par(op)
 # ats2, pH*cn, age_class, samcam, dgO
 ```
 
+### Figures of real data for functional groups
+```{r RealDataFigures}
 
-## Anecic Abundance
+# create subset of real data with age_class, abundance (plus N) and biomass
+data.raw.fig <- data[,c(which(colnames(data)=="age_class"),which(colnames(data)=="anc"):which(colnames(data)=="epi.bm"))]
+
+# melt frame for use in ggplot
+data.rf.melted <- melt(data.raw.fig, id.vars=c(1,5:7), variable="sfg", value.name="abundance")
+data.rf.melted2 <- melt(data.raw.fig, id.vars=c(1,2:4), variable="sfg.bm", value.name="biomass")
+
+data.rf <- cbind(data.rf.melted[,c(1,5,6)],data.rf.melted2[,c(5,6)])
+
+
+ggplot(data.rf, aes(x=age_class, y=abundance)) + geom_bar(stat="identity") + facet_grid(~sfg)
+
+
+```
+
+
+
+## General linear Mixed Effects Models
+
+### Data Pre-Processing  
+#### Standardize Explanatory Variables  
+```{r DataProcessing}
+
+## Create variable d(delta)samcam as the time difference of each sampling date to the first date, that each field was sampled; first date is Zero for all fields. ####
+data$dsamcam <- with(data, round(c(rep(0,60),date[61:120]-date[1:60],date[121:180]-date[1:60]),0))
+
+## Standardize all explanatory variables ####
+
+# extract all numerical variables
+std.var <- data[sapply(data,is.numeric)]
+# exclude all response variables
+std.var <- std.var[,-c(7:30,49:58)]
+
+# standardize, each column is divided by their standard deviation, and the mean of each column is subtracted 
+std.var <- as.data.frame(scale(std.var, center=TRUE, scale=TRUE))
+colnames(std.var) <- paste("scl", colnames(std.var), sep = ".") # rename columns
+
+data <- cbind(data, std.var)
+#----
+```
+
+
+
+### Anecic Abundance
 
 ```{r BoxPlots,echo=FALSE}
 
@@ -167,12 +180,7 @@ boxplot(anc~field.ID+samcam, data, las=2, col="grey", main="Variability within s
      
  
 
-```{r GLMM}
-library(glmmADMB)
-library(bbmle)
-library(lme4)
-library(coefplot2)
-
+```{r GLMM, cache=TRUE}
 M1 <- glmer(anc ~ age_class*scl.dsamcam + scl.mc*scl.cn + scl.ats2 + scl.dgO + (1|field.ID),data=data,family="poisson"); summary(M1)
 M2 <- glmer(anc ~ age_class*scl.dsamcam + scl.dgO + (1|field.ID),data=data,family="poisson"); summary(M2)
 
@@ -186,7 +194,7 @@ anc.best <- M2
 
 
 
-### Model Validation
+#### Model Validation
 ```{r fig.width=8, fig.height=7}
 # Model Validation 
 confint(anc.best)
@@ -199,7 +207,7 @@ plot(predict(anc.best, type="response") ~ data$anc)
 ````
 
 
-# Extract Predictions and Standard errors for predictions
+#### Extract Predictions and Standard errors for predictions
 ```{r}
 # anc.1.mcmc = glmmadmb(anc ~ age_class + (1|field) + (1|samcam),data=ew.data,family="nbinom", zeroInflation=TRUE, mcmc = TRUE, mcmc.opts = mcmcControl(mcmc = 10000))
 
@@ -233,7 +241,7 @@ pred.Stat.anc = cbind(stat.anc,coef.anc,LogLikP=anc.pvalue[2],fixef=fixef(anc.be
 #write.table(pred.anc, "Predictions+Stats+ConfIntervals.csv", sep=";", append=TRUE)
 ```
 
-# Prediciton plots
+#### Prediciton plots
 ```{r}
 library(ggplot2)
 
@@ -257,7 +265,7 @@ coefplot2(anc.best)
 
 ### README
 ```{r CreateREADME.md, }
-setwd("D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/")
+#setwd("D:/Quentin_Schorpp/Arbeitsprozess/git_repositories/F2_Earthworms/")
 knitr::knit(input="README.Rmd", output="README.md") # Error: no such file or directory, when trying knitHTML
 ```
 
