--- a/Analysis/F2_EW_MainAnalysis.Rmd
+++ b/Analysis/F2_EW_MainAnalysis.Rmd
@@ -41,6 +41,9 @@ source("Data/GatherSource/panelutils.R")
 source("Data/GatherSource/ggplotTheme.R")
 
 MyNorm <- function(x) {(x - mean(x))/ sd(x)}
+
+lo <- par(mfrow=c(1,1))
+
 ```
 
 
@@ -317,7 +320,94 @@ ________________________________________________________________________________
 The thought about using 2nd order data instead of 3rd order data is that, besides the response variables, not other covaraites have been assessed at that level.....
 All covariates apply to the field level!!??
 
+```{r}
+data2$dsamcam <- with(data2, round(c(rep(0,15),date[16:30]-date[0:15],date[31:45]-date[1:15]),0))
 
+M1 <- glm(anc ~ age_class + dsamcam + age_class:dsamcam, family="poisson", data2)
+summary(M1)
+
+# Deviance
+logLik(M1) 
+
+100*((M1$null.deviance-M1$deviance)/M1$null.deviance) # Fraction of explained variation in the response variable
+
+
+# Model validation
+
+E1 <- resid(M1, type="pearson")
+F1 <- fitted(M1)
+
+env1 <- cbind(E1, F1, data2[,c("anc", "age_class", "dsamcam")])
+env0 <- cbind(E1, F1,data2[,c("mc", "pH", "cn", "clay", "ats1", "ats2", "hum1","dgO")])
+
+par(mfrow=c(3,2),
+    mar=c(3.8,4,1,3))
+for (i in 1:5) {
+  scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
+}
+par(mfrow=c(1,1))
+
+
+par(mfrow=c(4,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:10) {
+  scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
+}
+par(mfrow=c(1,1))
+
+# Overdispersion
+N <- nrow(data2)
+p <- length(coef(M1))
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+
+```
+
+```{r}
+M1 <- glmer.nb(anc ~ age_class + I(ats1^2) + I(hum1^2) + (1|samcam), data2)
+summary(M1)
+
+# Deviance
+logLik(M1) 
+
+100*((M1$null.deviance-M1$deviance)/M1$null.deviance) # Fraction of explained variation in the response variable
+
+
+# Model validation
+
+which.max(data2$mc)
+
+E1 <- resid(M1, type="pearson")
+F1 <- fitted(M1)
+
+env1 <- cbind(E1, F1, data2[,c("anc", "age_class", "dsamcam")])
+env0 <- cbind(E1, F1,data2[,c("mc", "pH", "cn", "clay", "ats1", "ats2", "hum1","dgO")])
+
+par(mfrow=c(3,2),
+    mar=c(3.8,4,1,3))
+for (i in 1:5) {
+  scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
+}
+par(mfrow=c(1,1))
+
+
+par(mfrow=c(4,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:10) {
+  scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
+}
+par(mfrow=c(1,1))
+
+# Overdispersion
+N <- nrow(data2)
+p <- length(coef(M1))+1 # The Plus "+1" used for determining the number of parameters(p) is due to the "k" of negative 
+                        # binomial distribution
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+
+drop1(M1, test="Chi")
+
+```
 
 
 ## General linear Mixed Effects Models with 3rd order Data
@@ -368,9 +458,21 @@ boxplot(anc~field.ID+samcam, data, las=2, col="grey", main="Variability within s
 # linear regression model
 plot(data$age_class, data$anc, xlab="Age Class",ylab="anecic abundance")
 M0 <- lm(anc ~ age_class, data)
-abline(M0, lwd=3)
 summary(M0)
 
+# Model validation:
+# Homogeneity of variance
+par(mfrow=c(2,2))
+plot(M0)
+
+# Independence
+# There is inherent "dependency due to experimental design"; all samples with the same field.ID are intraclass correlated; samples taken on one field again on each sampling campaign are pseudoreplicated (Intrclass correlation for all samples from one sampling campaign??)
+#  -> use generalized linear mixed models
+
+# Dependence due to model misfit occurs if we omitted an important covariate or if we model the effect of a covariate as linear when it should have non-linear effect. Model misfit is assessed by plotting residuals versus each covariate in the model and also versus each covariate not in the model. 
+
+
+par(lo)
 plot(data$age_class,resid(M0))
 plot(data$field,resid(M0))
 
@@ -409,9 +511,24 @@ abline(M1, lwd=3)
 
 
 ```{r glmm}
+M2 <- lmer(anc ~ scl.pH + (1|field.ID), data)
 M2 <- lmer(anc ~ age_class + scl.dsamcam + scl.ats1 +scl.hum1 + scl.pH + (1|field.ID), data)
 M2 <- lmer(anc ~ age_class + scl.dsamcam + I(scl.ats1^2) +I(scl.hum1^2) + scl.pH + (1|field.ID), data)
 summary(M2)
+
+X   <- model.matrix(~ scl.pH, data)
+Fit <- X %*% fixef(M2)
+
+par(mfrow = c(1, 2), mar = c(5,5,2,2))
+plot(x = data$scl.pH, 
+     y = data$anc,
+     xlab = "pH value (scaled)",
+     ylab = "Anecic Abundance",
+     cex.lab = 1.5, pch = 1)
+lines(data$pH, Fit, lwd = 5, col="red")
+
+
+
 
 E2 <- resid(M2)
 F2 <- fitted(M2)
@@ -433,6 +550,41 @@ M2 <- glmer(anc ~ age_class*scl.dsamcam + scl.dgO + (1|field.ID),data=data,famil
 
 M1 <- glmmadmb(anc ~ age_class*scl.dsamcam + scl.mc*scl.cn + scl.ats2 + scl.pH*scl.cn + scl.clay +(1|field.ID),data=data,family="poisson"); summary(M1)
 M2 <- glmmadmb(anc ~ age_class*scl.dsamcam + scl.dgO + (1|field.ID),data=data,family="poisson"); summary(M2)
+
+*****************************************************************************************************************************
+M2 <- glmmadmb(anc ~ age_class*scl.dsamcam + scl.mc + scl.pH*scl.cn + I(scl.ats1^2) +I(scl.hum1^2) + (1|field.ID),data=data,family="poisson")
+summary(M2)
+
+E1 <- resid(M2, type="pearson")
+F1 <- fitted(M2)
+
+env1 <- cbind(E1, F1, data[,c("anc", "age_class", "dsamcam")])
+env0 <- cbind(E1, F1,data[,c("mc", "pH", "cn", "clay", "ats1", "ats2", "hum1","dgO")])
+
+par(mfrow=c(3,2),
+    mar=c(3.8,4,1,3))
+for (i in 1:5) {
+  scatter.smooth(env1[,i],env1[,1], xlab=colnames(env1)[i])
+}
+par(mfrow=c(1,1))
+
+
+par(mfrow=c(4,3),
+    mar=c(3.8,4,1,3))
+for (i in 1:10) {
+  scatter.smooth(env0[,i],env0[,1], xlab=colnames(env0)[i])
+}
+par(mfrow=c(1,1))
+
+# Overdispersion
+N <- nrow(data)
+p <- length(coef(M2))+1 # The Plus "+1" used for determining the number of parameters(p) is due to the "k" of negative 
+                        # binomial distribution
+Dispersion <- sum(E1^2)/(N-p)
+Dispersion
+
+
+dredge(M2)
 
 plot(data$clay,resid(M1))
 plot(data$pH,resid(M1))
